<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context="course.belatrix.com.belatrix_android_course_project.OnboardingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/textViewLink"
        android:textSize="14sp"
        android:textColor="@color/colorPrimaryDark" />
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:scaleType="fitXY"
        android:src="@mipmap/logo" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:scaleType="centerInside"
            android:layout_weight="3"
            android:src="@mipmap/burger" />

        <Button
            android:id="@+id/btnGoFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto_bold"
            android:padding="20dp"
            android:text="@string/btnGoFacebookText"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnGoSigIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/holo_orange_light"
            android:fontFamily="@font/roboto_bold"
            android:padding="20dp"
            android:text="@string/btnSigInText"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>



</LinearLayout>
